--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/app/Main.tsx"></script>
+    <script type="module" src="/src/app/Main.jsx"></script>
   </body>
 </html>
