--- a/index.html
+++ b/index.html
@@ -1,9 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Metadata -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/title.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Belal-Rezk" />
+    <meta name="description" content="Lexaz web app for hotel management" />
+    <meta name="keywords" content="" />
+    <meta name="robots" content="index , follow" />
+    <meta name="language" content="english" />
+    <meta name="title" content="Lexaz" />
+    <!-- OGP -->
+    <meta property="og:title" content="Lexaz Hotel" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://lexaz.vercel.app/" />
+    <meta
+      property="og:description"
+      content="Internal Hotel Management Web App-(a small boutique hotel with 8 luxurious wooden cabins)"
+    />
+    <meta property="og:image" content="/title.svg" />
+    <meta property="og:site_name" content="Lexaz" />
+    <meta property="og:locale" content="en_US" />
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,7 +32,8 @@
       href="https://fonts.googleapis.com/css2?family=Sono:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
-    
+
+    <link rel="icon" type="image/svg+xml" href="/title.svg" />
     <title>Lexaz</title>
   </head>
   <body>
