--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       href="https://fonts.googleapis.com/css2?family=Sono:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
+    <!-- App -->
     <link rel="icon" type="image/svg+xml" href="/title.svg" />
     <title>Lexaz</title>
   </head>
